[gd_scene load_steps=2 format=3 uid="uid://bncn6jtt3jtao"]

[ext_resource type="Script" path="res://Scenes/Nodes/Components/AttackComponent/AttackComponent.gd" id="1_0bn5f"]

[node name="AttackComponent" type="Area2D"]
script = ExtResource("1_0bn5f")

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_onAreaEntered"]
